# pallas

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/pallas/: crew.py  main.py
src/pallas/config/: agents.yaml  tasks.yaml
