[project]
name = "pallas"
version = "0.1.0"
description = "Pallas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.7.2",
    "litellm[proxy]>=1.9.4",
    "mcp>=1.16.0",
    "ollama>=0.6.1",
]

[project.scripts]
pallas = "pallas.main:run"
run_crew = "pallas.main:run"
train = "pallas.main:train"
replay = "pallas.main:replay"
test = "pallas.main:test"
run_with_trigger = "pallas.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
